hphp/hack/test/typecheck/strict_wellformedness/require/req_extends_xhp.php
<?hh

class :a<T as int> {}

class :b {
  attribute :a<string>;
}
